Update AirQualityGDR.java
Updated to show instructions on how to find the compile and run commands